one module project refactoring